# lance-context

./: .bumpversion.toml  .gitignore  Cargo.toml  DEVELOPMENT.md  ISSUE_EMBEDDING_SUPPORT.md  Makefile  README.md
.codex/skills/ci-pr-helper/: SKILL.md
.codex/skills/ci-pr-helper/scripts/: run_ci_checks.sh
.github/workflows/: python-publish.yml  python-test.yml  release.yml  rust-publish.yml  rust-test.yml  style.yml
ci/: bump_version.py  calculate_version.py
crates/lance-context/: Cargo.toml  README.md
crates/lance-context-core/: Cargo.toml  README.md
crates/lance-context-core/src/: lib.rs  record.rs  serde.rs  store.rs
crates/lance-context/src/: lib.rs
examples/pypi-basic/: README.md  pyproject.toml
examples/pypi-basic/src/context_example/: main.py
python/: Cargo.toml  README.md  pyproject.toml
python/python/lance_context/: __init__.py  api.py
python/python/tests/: test_context.py
python/src/: lib.rs
python/tests/: test_compaction.py  test_persistence.py  test_search.py
rust/lance-context/: Cargo.toml  README.md
rust/lance-context/src/: context.rs  lib.rs  record.rs  store.rs
tests/: test_persistence.py
