[package]
name = "lance-context"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Lance Devs <dev@lancedb.com>"]
repository = "https://github.com/lancedb/lance-context"
description = "Public re-export crate for lance-context bindings"
readme = "../../README.md"

[dependencies]
lance-context-core = { path = "../lance-context-core" }
